<resources>
    <string name="app_name">MyGrades</string>
    <string name="app_name_dev">MyGradesDev</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

...
    <string name="zip">ZIP</string>
    <string name="city">City</string>
    <string name="address">Address:</string>
    <string name="birthday">Birthday</string>
    <string name="name">Name</string>
    <string name="offline_user">Offline User</string>
    <string name="create_an_account">Create an account</string>
    <string name="password">Password:</string>
    <string name="e_mail">E-mail:</string>
    <string name="add_new_grade">Add new grade</string>
    <string name="subject">Subject</string>
    <string name="subject_">Subject:</string>
    <string name="student">Student</string>
...
    <string name="choose_people">Choose People!</string>
    <string name="talkings">Talkings</string>
    <string name="registration">Registration</string>
    <string name="email_address">Email address:</string>
    <string name="password_">Password:</string>
    <string name="name_">Name:</string>
    <string name="teacher">Teacher</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="go">Go</string>
    <string name="filters">Filters</string>
    <string name="lessons">Lessons</string>
    <string name="mon_">Mon:</string>
    <string name="tue_">Tue:</string>
...
