...
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:showIn="@layout/app_bar_main"
        tools:context=".ui.main.MainActivity"
        android:background="@android:color/white">

    <com.alamkanak.weekview.WeekView
            android:id="@+id/weekView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:eventTextColor="@android:color/white"
            app:textSize="12sp"
            app:hourHeight="60dp"
            app:headerColumnPadding="8dp"
...
            app:dayBackgroundColor="@android:color/white"
            app:todayBackgroundColor="@color/primaryBackgroundYellow"
            app:headerColumnBackground="#ffffffff"/>

    <LinearLayout android:orientation="vertical"
                  android:layout_width="match_parent" android:layout_height="match_parent"
                  android:id="@+id/main_fragment"/>

    <include android:id="@+id/progress_bar_screen"
             layout="@layout/progress_bar_screen"
             android:visibility="gone"
    />

...
